@@ -18,7 +18,7 @@ Setting this to false will disable full text search. This applies to all endpoin
 
 ``WAGTAILAPI_LIMIT_MAX`` (default: 20)
 
-This allows you to change the maximum number of results a user can request at a time. This applies to all endpoints.
+This allows you to change the maximum number of results a user can request at a time. This applies to all endpoints. Set to ``None`` to remove maximum.
 
 
 Adding more fields to the pages endpoint
