@@ -21,6 +21,8 @@ Bug fixes
  * "Open Link in New Tab" on a right arrow in page explorer should open page list (Emily Horsman)
  * Using ``order_by_relevance=False`` when searching with PostgreSQL now works (Mitchel Cabuloy)
  * Inline panel first and last sorting arrows correctly hidden in non-default tabs (Matt Westcott)
+ * ``WAGTAILAPI_LIMIT_MAX`` now accepts None to disable limiting (jcronyn)
+
 
 Upgrade considerations
 ======================
